Layout bugfix, menu problem

--- a/jWizard.base.css
+++ b/jWizard.base.css
@@ -25,7 +25,7 @@
 				padding: .25em .5em;
 				margin-bottom: .25em;
 			}
-	.jWizard.jw-hasmenu .jw-steps-wrap {
+	.jw-hasmenu .jw-steps-wrap {
 		margin-left: 10em;
 	}
 	.jw-steps-wrap {
